# chess

./: ARCHITECTURE.md  Basic_piece_movement_rules.cpp  Board + pieces parsing.cpp  CLEANUP.md  CMakeLists.txt  Iteration 10 - Advanced Pawn Rules.cpp  Iteration 11 - Jump + Air Capture.cpp  Iteration 6 - Real-time movement .cpp  Iteration 8 - Advanced real-time interactions.cpp  Iteration 9 - Game over.cpp  chess.cpp  chess.h  chess_standalone.cpp  chess_test.cpp  common.cpp  common.h  main.cpp
